--- a/0. README.md
+++ b/0. README.md
@@ -1,4 +1,9 @@
 Stuff for Cyber Common Technical Core
+
+
+
+
+
 #9Ge%z7Vn]~@<!;bL+X-BlH
 #windows_opstation_Iyig win_ops    
 # 192.168.65.10, 10.50.31.24
@@ -13,6 +18,10 @@ PENE-002-C
 andy.dwyer
 BurtMacklinFBI
 ssh andy.dwyer@10.9.0.3
+###########################################################################################################################################################
+http://networking-ctfd-2.server.vta:8000/user
+NEPE-002
+
 
 xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 https://security.stackexchange.com/questions/216527/ring-3-exploits-and-existence-of-other-rings
