--- a/0. README.md
+++ b/0. README.md
@@ -1,10 +1,7 @@
 Stuff for Cyber Common Technical Core
 
-
-
-
-
 #9Ge%z7Vn]~@<!;bL+X-BlH
+eqip 9Ge%z7Vn]@<bL+XBlH
 
 #windows_opstation_Iyig win_ops    
 # 192.168.65.10, 10.50.31.24
